--- a/cleint/package.json
+++ b/cleint/package.json
@@ -8,11 +8,13 @@
     "@testing-library/user-event": "^13.2.1",
     "daisyui": "^2.15.0",
     "date-fns": "^2.28.0",
+    "dotenv": "^16.0.1",
     "firebase": "^9.8.1",
     "react": "^18.1.0",
     "react-day-picker": "^8.0.5",
     "react-dom": "^18.1.0",
     "react-firebase-hooks": "^5.0.3",
+    "react-hook-form": "^7.31.1",
     "react-router-dom": "6",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.0"
